--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ICOMP - Creamos Sistemas</title>
+    <title>iComp - Creamos Sistemas</title>
+
     <!-- Google Font: Inter (formal y legible) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    >
+
+    <!-- Script: Inicialización del modo día/noche sin parpadeo -->
+    <script>
+      (function () {
+        const KEY = 'theme';
+        const saved = localStorage.getItem(KEY);
+        const systemDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+        const theme = saved ? saved : (systemDark ? 'dark' : 'light');
+
+        // Aplica la clase y atributo global ANTES de renderizar React
+        document.documentElement.classList.toggle('dark', theme === 'dark');
+        document.documentElement.setAttribute('data-theme', theme);
+      })();
+    </script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
