--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iComp - Creamos Sistemas</title>
 
+    <!-- META TAGS PROFESIONALES (SEO + Redes Sociales) -->
+    <meta
+      name="description"
+      content="iComp es una empresa de soluciones tecnológicas: desarrollo web, mantenimiento de equipos, instalación de redes, CCTV y soporte profesional."
+    />
+
+    <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="iComp" />
+    <meta property="og:title" content="iComp | Soluciones Tecnológicas y Servicios TI" />
+    <meta
+      property="og:description"
+      content="Soluciones profesionales en tecnología: desarrollo de sistemas, CCTV, redes, mantenimiento y soporte técnico."
+    />
+    <meta property="og:url" content="https://icomp-soluciones.site" />
+    <meta property="og:image" content="https://icomp-soluciones.site/vite.svg" />
+
+    <!-- Twitter / X -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="iComp | Soluciones Tecnológicas y Servicios TI" />
+    <meta
+      name="twitter:description"
+      content="Expertos en soluciones tecnológicas: sistemas, redes, CCTV y mantenimiento profesional."
+    />
+    <meta name="twitter:image" content="https://icomp-soluciones.site/vite.svg" />
+
     <!-- Google Font: Inter (formal y legible) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
