--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
       content="Soluciones profesionales en tecnología: desarrollo de sistemas, CCTV, redes, mantenimiento y soporte técnico."
     />
     <meta property="og:url" content="https://icomp-soluciones.site" />
-    <meta property="og:image" content="https://icomp-soluciones.site/vite.svg" />
+    <meta property="og:image" content="https://icomp-soluciones.site/og-image.png" />
 
     <!-- Twitter / X -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -30,7 +30,7 @@
       name="twitter:description"
       content="Expertos en soluciones tecnológicas: sistemas, redes, CCTV y mantenimiento profesional."
     />
-    <meta name="twitter:image" content="https://icomp-soluciones.site/vite.svg" />
+    <meta name="twitter:image" content="https://icomp-soluciones.site/og-image.png" />
 
     <!-- Google Font: Inter (formal y legible) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
